[tool.poetry]
name = "world-maps"
version = "0.0.0"
description = ""
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyproj = "^3.3.0"
Shapely = "^2.0.1"
click = "^8.1.7"
pyshp = "^2.3.1"
map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
